src/test/deca/context/valid/Objet/redefinition_method2.deca
// Description:
//    test de la redéfinition d'une méthode avec paramètre
//
// Resultats:
//   
//
// Historique:
//    cree le 18/01/2022

class A {
    int get(int a) {}
}

class B extends A{
    int get(int a) {}
}



